2010-03-12  Eli Zaretskii  <eliz@gnu.org>

	* Makefilie.in (termcapobj): Move termcap.o from here...
	(MSDOS_OBJ): ...to here.
	(termcapobj) [!LIBS_TERMCAP]: Remove specialized value, as it is
	now identical to when LIBS_TERMCAP is defined.

	* term.c: Remove (ifdef'ed away) inclusion of termcap.h.

	* cm.c: Remove (ifdef'ed away) inclusion of termcap.h.

	* config.in: Regenerated.

2010-03-10  Chong Yidong  <cyd@stupidchicken.com>

	* Branch for 23.2.

2010-03-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	Cleanup setup of gl_state in various parts of the code.
	* syntax.h (SETUP_BUFFER_SYNTAX_TABLE): New macro.
	(SETUP_SYNTAX_TABLE, SETUP_SYNTAX_TABLE_FOR_OBJECT):
	* syntax.c (find_defun_start, Fchar_syntax, Fmatching_paren)
	(skip_chars):
	* regex.c (regex_compile): Use it.
	(re_compile_pattern): Don't set gl_state.current_syntax_table since
	it's now set in regex_compile when/if we need it.

2010-03-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	Make it possible to C-g in a tight bytecode loop again (bug#5680).
	* lisp.h (ELSE_PENDING_SIGNALS): New macro.
	(QUIT): Use it to consolidate code and remove redundancy.
	* bytecode.c (BYTE_CODE_QUIT): Use it as well.

	* regex.c (regex_compile): Setup gl_state as well.

	* syntax.c (skip_chars): Setup gl_state (bug#3823).
	(in_classes): Use CONSP before XCAR/XCDR.

2010-03-03  Chong Yidong  <cyd@stupidchicken.com>

	* keymap.c (Fwhere_is_internal): Use Fequal to compare
	definitions, so that keyboard macros are correctly handled
	(Bug#5481).

2010-03-02  Eli Zaretskii  <eliz@gnu.org>

	* coding.c (decode_coding_emacs_mule): Fixup pointers to buffer
	text that could be relocated inside the call to emacs_mule_char.
	(emacs_mule_char): Use CODING_DECODE_CHAR instead of DECODE_CHAR.
	(CODING_DECODE_CHAR): Add a comment describing its purpose.

2010-03-02  Kenichi Handa  <handa@m17n.org>

	* character.c (parse_str_as_multibyte): Fix handling of the
	multibyte form of raw-bytes.
	(str_as_multibyte): Likewise.
